--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,25 @@ services:
             POSTGRES_DB: ${POSTGRES_DB}
         ports:
             - '5432:5432'
+        healthcheck:
+            test: ['CMD-SHELL', 'pg_isready -U $POSTGRES_USER']
+            interval: 5s
+            timeout: 5s
+            retries: 5
 
     api:
         build: ./api
         env_file:
             - .env
         depends_on:
-            - postgres
+            postgres:
+                condition: service_healthy
+        command: >
+            sh -c "
+            npm run db:generate &&
+            npm run db:migrate &&
+            npm run dev
+            "
         ports:
             - '3333:3333'
 
@@ -25,6 +37,7 @@ services:
         env_file:
             - .env
         depends_on:
-            - api
+            postgres:
+                condition: service_healthy
         ports:
             - '3000:3000'
